enable intel-gpu-plugin chart

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:5FT3qu4Ah2r7mCd9Bg1V+r1YShW2CUjfbTKZoc+5cQjjY1XdL8sgB1kzglBB4i3LzDDn0SuApr72AriZUsUypA8=,iv:1Z6+vGDQ2WzYrN5L8B/GyyyWyaKqMXpgd8L5Rw7D7QY=,tag:UCMaPXt5p6B8LGTbA2tQBg==,type:comment]
-#ENC[AES256_GCM,data:8ljStujcA2RLwaEC5A70AdDmTk1Jl5+jjHkaWEIdmf30a4AUe96rw5qFF6c=,iv:jBZcEdKR4uDekBqnTxzTIIlMMLpUo+JP4R8ly+sHJ1o=,tag:vWEJ1Tgu+2draS0yW78/bw==,type:comment]
-VIP: ENC[AES256_GCM,data:J0qlFwoUhxEFsXwPsw==,iv:QWJiQoPC9j2177bbscZU+HEFZeFEfNikCe3oBk3L7SQ=,tag:eWbdF7DdlebAMLN+mws+sA==,type:str]
-#ENC[AES256_GCM,data:HM/YqqFoVDA2v0xoKCbj+s44p16jDRctLLHX,iv:w01ScGnwbe51sY+bRHxdShkHoDQwpOLvEBgiWdGytxs=,tag:Bp6ASaPcjY5mY1FX1eYy1A==,type:comment]
-#ENC[AES256_GCM,data:MzRVRTKaumklok/IuOPOm64fPBlCIJACtTuktdFZnJZd96OQ9DvFhydaD527stvPeD2cwaEqQHTxTwYf73z1M9t59YRfWu/xQb91LlZSUjEEzCrZYCkzTV8=,iv:zNfM47Oc8mmZK/bi2qozjK69SOzf8IVNun08y6hZDjY=,tag:ia+8PfQhoVZvO4ye/D0+dA==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:wQbk9cKebo/mDtyfxeU=,iv:o10m2C/WiGjZqYevqqo+LDLT2U2hsaCh8D9d31ImLKA=,tag:N1DPCYEkV5fRYsl0hjQPkA==,type:str]
-#ENC[AES256_GCM,data:x66Nj8bOyRxU51EZNJ0I23vZcrkN5O43LzZcZwiA0gJaXg==,iv:/upYldRl06umoveiIT7i1K0uSdhjdGIqQacGc/+AfXI=,tag:bbz6y19Y01DBMmfHYBpfMQ==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:VlRO8ecX/J9nR7EPnw==,iv:g2CFoSX0bPNufb8NtuO656QnqvocvcD3Fp/JKRgS/Iw=,tag:pR7uJ2mEsYx33XerZEremw==,type:str]
-#ENC[AES256_GCM,data:tSexs3Ql+7IZDNZBWgvy6BKDif6ay0FJqLWVjHCwyqbnVv2w7ZVc06usRt7oHME=,iv:H8rbQKm9/jgf6oxvCGW5uBDNr2GJR2p02FIDMPUVxIc=,tag:3cZjatpyGMNDcvwS8QrjeA==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:6TDhMBbsP97AjDnTIijA37N1Vb4F6+ETpgSrL9AJVQ==,iv:946U8M/Xj6V5l7DmYdbJPA+wOAQ3uUPEelObxfM6Xwk=,tag:O/VVAjEAD9dtcPvO7YFkOQ==,type:str]
-#ENC[AES256_GCM,data:suWBCprOCcz5ts9VRMHWcVxp1heiOyPrsTJwdryosa/eDXAXAeBK+IjlhfEYmQaELAxt8u432nvYUQu+7rYjO82n5uC4TnMrf5jW7T+EosDGBQ==,iv:7Uf4Iqu9sJYdSuBcdEy474WDnoRgYCzD9XtrQF9lxQY=,tag:MvYtr6ujV01Vj3j38kX8yw==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:tzOxRNnJnkVNhhP/5J+P,iv:e+hD8g2Vx8tUmYMY7ZQW5Ydqq8nnGXypY+zUlr2Aolw=,tag:HMdzcRPZ9nubZDEJ4hoszQ==,type:str]
-#ENC[AES256_GCM,data:GM6zEzVdz2WbNnObeKOnhvyVyO8y82kq5D80mVEYsQ2r,iv:eTrnGS7eiaenmKXqyqReYmvPQcgtTeFhQYkdDeZBRGY=,tag:L9Sk2D4CqQqNOP2jfXbmXA==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:elZmNkHFJV6Kpkg+6Ubg,iv:i0A/CTMmWrAdc/nUAM1QJ5ZghpUJgV4J/CDyqJfgw9U=,tag:fR1mEXXk+sWBsUH+QeRtVg==,type:str]
-#ENC[AES256_GCM,data:gwNR1ljJdEa7QkzN/DdnOLmZBCQ33WZ0EVRiIfeLyNxymMvikwm2D8Z0fSGkUOpbpch9Cry792GllYnOKO5cr3qvih8652RqcXrzQuZVPOc=,iv:slhRSdBcpZnn1NB39L2V3txIqMJ4iGnz6bEXyVvKsZA=,tag:GkRilcN109POK1YnXYafyw==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:yw1NMXvdJo4QUibb2jfL,iv:km8msvl1oXDQaajy0Jzkm8bxXOv0Gl3iEmTFHmo7EJ0=,tag:64+xvawZmYHuX4YqQHvmmg==,type:str]
-#ENC[AES256_GCM,data:A+IU3Da0nrw4RvEgqwuF+1Ni5PesyN9S1KN3+dmPoFWfQCJs7GCuI2lp9UBI8uyTU7NjBWLmKq5Yc+ELV/1O3ybI/2unbva3itx/l6eijq7v1HE8Z7Lq,iv:347n6IhpKZTMvYcYdwZZmQ3sJqLGoLiwJ+GqCWM/ois=,tag:TE0YPdD2TbP89Ztjqd3nZg==,type:comment]
-#ENC[AES256_GCM,data:E0cDWGGc4q4iP3VHhsHz92KJU6uIV+pVYHpRhSPaAQ728Veo0rnhNHXpYYEk+dGdy9AKk7LBxSzVN3lNmbWJg/8D6btILXR25xIUqA3Or6kUrkPpC6IsgxHDCWu6F9CL9weLQP8r9WcG385EqBiOhIG02rsFl5M7R9Id/w==,iv:uol4jWPGXWD+pdwXW2DEDVbFiAgCo8p+rXQscWdxWL4=,tag:EIe1aH0DOwS+L3EumhVgLg==,type:comment]
-#ENC[AES256_GCM,data:JrydsV52EkREnjs9reXAW5eqTbe8TtJBj9r3G9EhHCgE3IQ2B/vn8dGyRjOJFxGefhVIhCnoevUW6bIqtCA0Q5/nqrszSk1gRXqqzf6FPmw=,iv:B1iCGcgNrcbOlj+UMerUmadeFOQk8BkSUSPbdohd6eY=,tag:wfhhT/nx4FQaP82+gMGhaA==,type:comment]
-#ENC[AES256_GCM,data:twnOE5DZ1903zro1dRuuxzdScfRDGYNb0OWctdTi3T2oEJa4yZS/diGa8aIx0s7Rgq8W8CSd,iv:5bP4eM89/7uERazHwj4nLeD9Y7QSad27PhJFQkwULoo=,tag:1shPwrcwVKpEW/lqxQhlsA==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:bDsso6pWhgIBbyaq,iv:ZZvVGMgN2UPGjdCfLVvZN3sWl7Z7WrNIURQjOMtcPvU=,tag:4ok+TmZ3J+8ghQUWbSY77A==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:FjxiHRWUGQ1fXPS8GsP3UGo=,iv:etW3C7uUpXepnRZGE26ylMOG1VFTZxyxAeKWQKXTOJA=,tag:6xni8k+UbNN3V4Qqwwb0zA==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:xdOcZcepRnQ/08Qcvfs66qnIDRYXmcWxMuNdIsQBR10=,iv:B1kcSfZQClCQm/z5mEd3AfNqX3af45EF9cw0CFLlnwE=,tag:P+WdI+51q2R1fvw6duGS3w==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:phZ6vV6VxLEJlAuQWTTVtZ+zihwDQ2PHkYHvi+1/2h118oURCokibQ==,iv:uJTwEEQ5314cZI6MrqLfnsigrXkIjtJ1v6oDUzmZVhg=,tag:l8X1AmlPvaR4Ja+3ZWhWdQ==,type:str]
-#ENC[AES256_GCM,data:t3MPaAr55k65MsWV8XGiG+A77AIUzKaERC3Clgi/3pIR6ZqqS++/pDxfa/zyuqJLp6jHAUubuJC5pNBy99MfPA==,iv:08NjlRjyGuAdaTT4zg+JWw0K7Yfgcz1bOjn84YfNcOE=,tag:WROS0F70s2FlzIfg7Off7w==,type:comment]
-#ENC[AES256_GCM,data:lGjB2j7YoruetIn9rbwXYKx7aUjGq50HnrqKKUlJtsIYd9sefxTfRnovTPHnyGYvdZqWNX7oZig=,iv:sSZ1ZyA1faOho2MKcp+xMw6gAn5sNvdBfeejvMsIZ6U=,tag:DFTorjE5x8+hO9mcnMVmzA==,type:comment]
-#ENC[AES256_GCM,data:q5bVY2Uvcun2AYTI7Jlb8ZdR+5FnMOB3Iw==,iv:OsUOh+oRg0X5h2MqSDYP3lG4oEfAWyAWbQOJHhL5aOc=,tag:IEpDtWNLpf6Jeia4rwsJwg==,type:comment]
-#ENC[AES256_GCM,data:PxilWPK1QWvyfvvNc27rZ/k9H6Cx2j5xefCi8o0ieH/ONqycN6XPvBmbE8/RLNw40/y9txdLMR5MdHJWAF6dYIjwqgP90/N2a4ZXX5o=,iv:TU05/NYl+fcsf9lQ+hf6duB6E8i6MK9S8YjN7czWXWo=,tag:zacFoCBUtI12wJUdcxOoFw==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:7Deu13y+lLnhdbN+/mzkxlsoMJm/zENb4AodSXtpKgGwouOnxrRGhhWMu3LwrCxB,iv:PbNHF4ON7hRMX39xuuTCX5oRXF9Cwqf0smpSk3r4W7g=,tag:/I0XyDp+3lJ2Hpl0Uv0PSA==,type:str]
-#ENC[AES256_GCM,data:pC+dIo1tofWNlSePJZPccXCYxU8yE1zDnnc3JF4KjtaIwSx/UkVcGvVd5oCbhrJDNqJ/766Mw4OiJvyTfOW1Hlfps4F1txE=,iv:H4Lpq6PFryRi1zoJAclhpJXor725Q6EM//fzMrf/CjY=,tag:nJhJ1R8hGFLofGuw2hRh4Q==,type:comment]
-#ENC[AES256_GCM,data:BskFTdPeaAv1JMlmV0q398FMOvOZO/8H9ox8AQNf1lQZ0S/QtzdTb9n+tXj1u9VwRgvfp01N,iv:ScNAPNXW4pcgT+s0OrBQUAmFZyZdA/wj1fAfZ8OoWeo=,tag:2oeDFxZcVRUENxVkcfSLUg==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:MglctQl4dw==,iv:iCkxNJ76B+Q+IM7M0juty4higOcfVlc5JBg3+1jGxJc=,tag:dXb0K8NJhuvPMJ6LHoYNGw==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:0Bfcib/JZAPqytDAhY/XScMCTrw=,iv:FqUfouk7gxcaYCCsdhex9LydANQmiUq+d4WkyFRM7Os=,tag:YvFdztG9SVINsKdPTTE0/Q==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:a64JzDU84VAmpFQ=,iv:qJAVwuBXXyl2spoWuoB6QG1csd2/QmHgvwyyks1Yb7w=,tag:osmPkjAICaYJv3zUduK6xQ==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:hSBOhwf/gCTInp8tXD4Z,iv:JhYMKwEcy9Uftd/P2CHUxrdLn4SdTvWW/QWQDWGGRKU=,tag:Z/RHqysVqdJ6nX3BQ5SFiQ==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:UbZFOmokB38Zbwf7HooXRfp5qpLybs6Dhw==,iv:gwk6i+a6M5FX3P9hSHM7K50wY/rzn3I5cHwlJdujYwE=,tag:iDUH8HjomT3Az5bukCPDSw==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:SRiSP+QGE4qW/+f5OO6ZtpAm+hjJFBMhFIbZeBouWw==,iv:fSt0iGdBudXAPowr89JDXk+PY8VOBFxsvRu+qg/3FNA=,tag:jULs14E0N8b3vPGUK0bh+Q==,type:str]
-#ENC[AES256_GCM,data:SGRtbPzW8evaap1NTRFUN5bgQdjGDO7cd4BYwKtx2OKNZVV684Y=,iv:D6aX1THs7ZxK47ccd7bEmEv8b2Vo9d+fWKObwA25g5U=,tag:7Dq4BFyBRdzsOwViqFk6mw==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:jtbDaul7M9i6tc0pWjTtgKbyEm8=,iv:WNPHcv1DTS9td2AYOkLxzbd43v+i1h44Yqy9o3oJPZo=,tag:rT0bkz0V80ojDJUl7BCSVw==,type:str]
-#ENC[AES256_GCM,data:1V5n2n1d++vWnKKFPVw=,iv:NpLabw7NjqyPv4M4IGOu/RuQdz8tP6Uh+Om6tnBD5tY=,tag:FKyFuZaepGLYSm2eJ5JNNg==,type:comment]
-PODNET: ENC[AES256_GCM,data:wdlETEKuLPpbfXc71A==,iv:IsIVxnZN5CL/Gwy3ycBskRVj3ThvG5G8lVGs/C9CIZ0=,tag:9GTYQlng14E9nyOIKKda2A==,type:str]
-SVCNET: ENC[AES256_GCM,data:uX8pGOwDUFYf2HliOw==,iv:DBDu+ElqxspxoO4KcSOevu3J5mAYkvwNNWqoLVebY2k=,tag:pBtAECwjQ1Ydi4v40yzDLw==,type:str]
+#ENC[AES256_GCM,data:1rCjkxQi7Cp0LVSQ+g9h6exy/yYpvUEhQ97oVnBxK+apl0GBfsdtjobi1mOkcFFlK9r7DfH9ysLy23IV50464ZQ=,iv:NMZVHJDNSeobsndx/P7cj6ldrm3R4VEk0ip9x1EOmHY=,tag:L/Mw8LY6KkHNPyAceexNTQ==,type:comment]
+#ENC[AES256_GCM,data:p2hSNqUJoeMrAZIw4G6+z20QCLTY+/LiEe+4gNBvkp5iwYs6Pn6g/2NmmiY=,iv:WwYfnylTq51SBhZ/Wyd5aeeOWhrxdkVpACJuUmbMDWA=,tag:R7c2rC5EWiCIXAU1dsrRkw==,type:comment]
+VIP: ENC[AES256_GCM,data:YCOml473PWwpvRB/uw==,iv:XHJJWZLldX1CIFbQXDP6M2J8EucRkafgv2uVDDlgmgs=,tag:7GDbQnmpxQqlP1kKd+kYyA==,type:str]
+#ENC[AES256_GCM,data:tnR8U/VT6mxtxLDD+rELYzMw6vtY4zzCN2R4,iv:otkLSapwgCrknHQppWXPbexkzii9m9o2ssi4ce75tEw=,tag:6PG5zCWlWRxZvPofsRnRng==,type:comment]
+#ENC[AES256_GCM,data:5gvyXpTYD2tXc+05+rWiTyfwKDZmrqi3QY4DLtkuvjLlsr4EgFguTDUanxr/1mWXUwzwTNTji0p81sFzYNrIaSLKD1ESlL0Ucvgxa8QQL7YJq6I3IdIwEaw=,iv:sMwhv91JezLHEnR8nC6xCQfVSm3UsHpyNrUcxK0gqOU=,tag:Arpgr6v5cjYTAwj0zLyCaQ==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:Ayqf6FuSi1Bogz9fb68=,iv:pm3jP/WsY3bhj43bQttYfcrXX0+0/1fRC1+2KZpg6Lc=,tag:ccEHNFIO7VnWNPJslpzkpg==,type:str]
+#ENC[AES256_GCM,data:AgCpcZlPFTG70zFYHEYxtSlgbiQA4KpSflzFSQoaPDRqGA==,iv:5QXXE0vyaSTNJvIlBZgLBOK4i3GEo4k2J6lBMbva1Rg=,tag:IC/tn9MC5lZ9F4VlL5vZVA==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:5DB/hGM/50PB7TGHOQ==,iv:X6o7rXc7nnN7MN9vH0Dx181v2w3C7LPJ86Gvx9CqtRs=,tag:Ga10K6qaMIxZZG0RGSq6iQ==,type:str]
+#ENC[AES256_GCM,data:DY9NOjNuyW/MRwIvYuO6RCv6ajEl9WpZAyw5agB0MNlkB0QYyishZXhSZzwyJoM=,iv:D3r5AvJoPx/+Q1+UTzhzbzLCa54cUCDLgwwvYv4egMU=,tag:Gu1Tpp5CQbK7noiEje7tbg==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:cA+lHlFV9LV/0kGfkwUy8qTTLBDh8Yh1garBHLUgoA==,iv:3Ds1bC1HhIClH2h95Y658ErbTdMvaqrGUstDYV1o1Fg=,tag:aG94aDHJYKqbSdx3aJGKwA==,type:str]
+#ENC[AES256_GCM,data:yfaHOT9S/tWe4dJVeBN+ZvG2PLmGesk6AL2k9n2dfVgG3n54WBl+4fAy93J0cyhAprotQhcdEBMB1LgI/1RZOYjcB0p01bso56m/frXeOhUCaw==,iv:wvhzOxgyg5e7plZDoNubgxXjZAmVL1bhMzGl1mcsa/8=,tag:yhWaAX0VkcuPWgfHGt9Olw==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:sqJOiMIO6cRXuWLHCxAM,iv:b48r92NUiXbhWXiE7k3VJpLvn8bMOTLTBr54SfHABRs=,tag:DdUHZS9jbgW9x9nR7XFOxg==,type:str]
+#ENC[AES256_GCM,data:gq5rAFTOsuNQ58IoxiBKOvQlYSFFtRQX0rrqKRL+Y3Ii,iv:+FUla9wS7XFVfhSz/za8HNtbelwCs/1rMTuRuMlipNo=,tag:e9fbxL/pdyGhsT+/0yDMbw==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:1S+sRAHYhabUw52WxLNH,iv:DMtVHo3/7kwqCHkRkg8hsGnDxLlRmT8iJUgdkeWgXmw=,tag:b/ECyuSD5PERLJH0ZWUBow==,type:str]
+#ENC[AES256_GCM,data:iOtLJmth34BqQZJfSVRQXOxFqBRJeshOwVTJfmEwtObLSS0Uh/7R5kW6YEfisBRS4uKv07bP75coDo2oyoYJW3TEKviwj7Dz992Luix78zE=,iv:RjsENiG+u9o0UlaEwsa4YYqCqd+qttE6YDNmwSzP6zU=,tag:XJUI0bnW/vFmS5jtdhwyVQ==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:UleOAYa498BDYVc+FE9S,iv:XCn9H9a2TUV47WFssxK/oWPIQJqCUntKIN1mTgVp1us=,tag:0CxTf1eQKK24YJPDnHRLgw==,type:str]
+#ENC[AES256_GCM,data:tZt5AoPcFnxCyC8Mr0G4boIkw7LAWG/WmuVFeR47aTSaBjtPyWx3GFqsdSKiHC7XCAqlFaI0T+D0VhQO8C6zaxjUfrqljUXpQe8hCab+IeeAB3ir9aeS,iv:BGNrFDuoe51fwQNgCP7wXLpVPkT1j5rjZ2E+TZSooYo=,tag:3+kNvDsxfzl3dev5BJihJQ==,type:comment]
+#ENC[AES256_GCM,data:tNKabeeg4gKTp2k20LrbOekHFTV9ISLvmQyLkf8cd2l3sDNAokwdiebi8WocCq3iX4gIJv5CVQVlDxqMnwYJHGzILvZUNFK//SpNOvK1poK/gmdMvTcqjc9RVrDq6JBwda2jtPZ+RcwlPM5YF16Ou+ugW2KEqpb+Sf1Dyg==,iv:dGR4+qHs6iaN+zkKSVuWkWr2W176gCIa+PaNq0BI8pQ=,tag:HVkoFcv9GmWoyfO7gjEDJw==,type:comment]
+#ENC[AES256_GCM,data:NOl2WyB876sCPE2o0hVNev1UynYjp5BWtYB6vJ4Z+HviCoihlnq4Z1TQYRhELDhO4QbalOZ+gmi8PVfXJs+e2EAmXK2j9x+6eLXvlJaJ9u0=,iv:wnhfpj83GWBvmfqtcWI+PxetI1SSD6brQcmXw2L9uxA=,tag:UeBM3hL3fXireFDiEMSb2g==,type:comment]
+#ENC[AES256_GCM,data:tRJxuyOy6P87XXr70Ztldxa6whlfTRGgAeaeObcRtPAp35StTmhJQtyF/9jgZKHiaCJeAat4,iv:HGiMk5pwvosFJxGhyG/ekgrzrBMlnjO6hYNCNy+DX4Y=,tag:C7zUiiCzbEpzqxAF6CNpCw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:Ryt4/XGgoKaqT9c3,iv:39QjIQl9H/UiUi+V6xzQyHbvjnIydfqHoAsi1uwb9qY=,tag:YiFzba2EZakZIxG0QEyLUg==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:QKdP/GFcbhuFbgqGpjfSQws=,iv:chS78ZA1AZpK0lIeT1kJixPuxHWn8XJ+jb+aoX7xwgc=,tag:pVT5oMYCu53DXrYxgGCmcw==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:zVSgchZ6jf6mNUF6ObCVZuRV0LxzKcxn8icneKLXNNk=,iv:2po8bGZ9f8coCulsJKC/xe2N0oIH1KdmNme7cTcbKtI=,tag:6DsHvkiRNhKm1Ber0bCmBQ==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:IUapnicyJwpbBt/31PSiyV9CVjvhJ/vyUwV/+0xIAswXLppmp0VDNw==,iv:O9jNSne1K7780WsLm7T5Whk1a3GbjGw5serSHP2/Aa0=,tag:lq2qipgR+HuNuKD3JUUSDA==,type:str]
+#ENC[AES256_GCM,data:RhB7ABK+038hcPToqpWhcpKSy9WjXGn/GW0zpuptxf939wS2uGkI7s7u7bpEKrdSGu1rzYpsydXBhPy5g71zwA==,iv:eRled0fciBKHyqdFOajmOkfSEGzLQQByDG0PfrsrKoE=,tag:cAPgq6MHtPyH0X2kSl3WYg==,type:comment]
+#ENC[AES256_GCM,data:GskIHeJJQxWAUlmtfwbdWT4qBCX8bivekE2SDin/QaoqrSSacn+FeZbL9waYwIt0qohciX//5yg=,iv:93muzepgAXskeZ+/fnt9LmgN740o5MT3v5UPdXJ0GIE=,tag:DnFbc1hfShK939GEgqpqhw==,type:comment]
+#ENC[AES256_GCM,data:m9a2f5EOqPz06HZAGkribHK2uxlBc7mm3g==,iv:3ejgoJlh54Pz7zGZrf9gwMBzcnWGhIKyXylH4EZJBg8=,tag:mTeR8rJtl4OR/z0ObCgg2w==,type:comment]
+#ENC[AES256_GCM,data:Nmi8SvkmyvvIiVt7GcPZe5HOHJxQOMnm3xYfvJp/4h1Vq/eUp9x7jXKRHhdKXK/lJ1xkI5Oa7nXJfVVIdhcqfWgLYpVXhCwMuqCbUbk=,iv:Yasg0bLHDJUdKp9mzETux2UjxQsx9cfE0IKOHkMfY28=,tag:wjQ/EAWsrp/tC3zk+MEQBg==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:4+yvsHE2/oRiLBgwvaOuv5DcVDZFpg9qbHMJz/DrOMLhwjjHGAKqTcqyz93yDdLD,iv:KK64r7DCS/LNyqPicKtVpmdvxKw+RVM5DkGjqBKRr2c=,tag:l3Nzo3sMuZpNwOJt8ZjNUw==,type:str]
+#ENC[AES256_GCM,data:1h5FEmaODD/0fEEyeWJRVGuUd4Tp+PFbEb7q6JWXzD918iG3gek/tlmH4t5UUZGXQHuFWFNMAtiGAX629G1oEAqWNduUeNM=,iv:asjgzjKN5AFHos8/hotcR8U7TcaBjQkowjLhUYl97yY=,tag:ItM0aHPdWmuMWtfbfrH1Fw==,type:comment]
+#ENC[AES256_GCM,data:kTJv8xJczNJ9Aua0aqJvgwVa6/8Do7d4toQY04ZZsdYEp150n30sT2iXasmzXd+S1FXf3YD2,iv:+tSvea4GFRZZGsS/YGbGBUJh+55e1e4YXlS6XVgvvv4=,tag:T2u4MiHieVOgMUpa9zNnbw==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:/YZrMe0Qug==,iv:4lvcbYMpFZWPBO2D2ZKesUJb12P1Xw0AZ+AefaLFDno=,tag:KVjtu6zw4Wyg/esf/dLpww==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:cyhLVeaVyupPTVe04o9ZhiENeP8=,iv:W7wEwzzFm1za7U5V8MS4f1XVVdNa+Ijf4l5zoT+YEnk=,tag:Fsg7Bkk2hqboD8nn8Jaubw==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:7U3t7DTy+oy7f8I=,iv:/GMyKvsr5ioJ1dPtTQoNoxGbmBwcScEYBbM0928zp9I=,tag:S0UXXjhYA9Tg31iX41Zb1A==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:jw6rqsxMqn39Uq0Jg9r6,iv:kCOe558fGs/xYoyzWPmXqMuzCoGBspjnj5R/7yZGD8M=,tag:JivkoeaQolhd7gdgTcdXjg==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:5AUrGxOgacV/LHAu5xiBoiWiXd663hXUhA==,iv:WCfl9iXXJb1Zub50XB7uXo1h1FNW8amtEJVXWJO4GnM=,tag:AHCEJY7hRrtI+I5RUB8FyQ==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:O1IYqW1PIf+p/NDnj1ribZKOl+6V3bbkVs26QPuUsA==,iv:FvTfpYKLhhKk/usq7XoioLvIG6+FQB4reNTYjQLUa7Y=,tag:ZBFCd9NY1lsXesi8YJFIjQ==,type:str]
+#ENC[AES256_GCM,data:99vHoDkrinPFKwaTM7KmVbgzOdDQNawRx6PnLCyxs5YRhuLLv/Q=,iv:9JBmJkLtlPT0VtToVRh9BgL6QiHGsssaCFKNTGBZ5UY=,tag:DmEtSuvZxCxrXZe5vLEY2Q==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:oU+c54riZWk6JFIZlcLU/3sek60=,iv:SX1lR7IqSOyx27w6LzgxwvXEFvbBp/1Ao+p/W8uQXnM=,tag:DMS79y0n85FiPnKxbZwuCQ==,type:str]
+#ENC[AES256_GCM,data:YuHpqtI1MLQMPmzv5tg=,iv:2ofQnt9O5O4zltb/e4JJZJ14cz/80RBiNTPVzJTZqIo=,tag:VzXML6i5omBzmT/a0jeFuQ==,type:comment]
+PODNET: ENC[AES256_GCM,data:B6fRiGyv7zvhXUDGIw==,iv:dNph0L/0wjqobLATIX3oeqrkplWlReUfAVbGV445IKY=,tag:6zStKbAgn8BxIYW2r0S1Nw==,type:str]
+SVCNET: ENC[AES256_GCM,data:ZlWTgTWwoo726EH0kQ==,iv:EtXkbNvYCbO74l4NQqV6Bh0M3uNyPTS5Ln8ai4Fbo2w=,tag:YxVOoAMYEhK7kCO6GhbdVw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFRnNZdkg0TjM1UGgzZzJt
-            WFlTZWo1UGVVVXk5cjIyVjV6cnhUSGxLMkRJCldHQVdua0NCUnpoS1g5ajBveVFZ
-            TlY3V29DYm5yck9KZzVWR0UySXYxenMKLS0tIGRQOHh2QXNIdnAzSDB6eFNMSXhw
-            a2ZnNnZKMDNLWWJyNEgxK0JKbnl4UVkK5Ny3Z3bU47yXag7nPRLB2Pbo6AIqoNDO
-            1CFagh1dQJndAznepaIjOsjRhwVHcxSdNgz/iX+mYi84T0zShlNs9w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVQysxZkdSakJmY0RETGlL
+            dEhoVzgxNHJXQk9GL2duS3JxQWlGelFnckVRCmNsb2tTdU9PMXkyMnZMV1p2WUpU
+            UHVldEQ1YXVwbVlZL2ZCeUQrOS9jbWcKLS0tIHk4NU56WGNUVlk3Z3ZCb1BnQmtl
+            OXFyRFU3N29uWmppVi8xblJSTWo0bXMK653YmKBEN2vWJ9J6v7feiihuhklV5bFu
+            uU/v1hiqIyyLvrYIb4vuyiOe/EvvsU/aBJIxV+Fm2IBg4fykZVsSYQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T01:50:46Z"
-    mac: ENC[AES256_GCM,data:egRQ6Fr7HZY/vs99birRA1VBUmJK1OUX1PynSk3NtFRZilBeQ6O+9+v84C32hJw7vciQaI1DV9mk2DcuW9Z3vm1yuZhNTYwQfWjYPiQJALqyta/1kFwrBx1RJxFFGweEt4r94D2+LNgUDzuloQXnhdqYUICWW2pJZQP2lqaTIrM=,iv:z4YG2CfQZqVr5OCj8yhYx/CxRhmKhCANBLiHsP91AjY=,tag:2SFubeNpDMCJ85D+uT7tVQ==,type:str]
+    lastmodified: "2025-01-19T01:53:25Z"
+    mac: ENC[AES256_GCM,data:llCBDvgWA/1oES8/h69Aan2KBDIoMC+QUIvqlrnZ6k6mA/tDzIgQvbNqAZwxM4IaMdJu/4ySdqtZE/sJGZF6TFtFrXWN0BC47jek+9ES7scFOlIPBPFSZEOVE68alUAc9SzfQYoKo04oos1h6MbXwAIWLCVaioF2zbOejGQIcMw=,iv:QOCy1Nn8s59RUSOovk82yiML0+GwC55IHivHHY6Yz1E=,tag:yMWYTc0pZTchA0WiOJp/Kg==,type:str]
     pgp: []
     version: 3.9.2
