--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:xvVab1NjSseteIdP2Y4Bv+AOO7ou/6LegES2/hmI00y+8bImQ6Usbb9CCsQz9VbvLxCvpli3sqttk8pHv373ugk=,iv:pPusYx85GK7gLL9CC/ETEQH7gdGENp37Odmz96XixCg=,tag:fBajM+QjEQ1SB7jGvTPCzg==,type:comment]
-    #ENC[AES256_GCM,data:SesmezRrIEOrc2b3n+bopHoWwtiKnBj31r1C2tI/9m9c2U0JQ13Mwj1yQ40=,iv:OnRZZ5xH2V4oEC+i+PHpC1nGUUuUndcZClGFT4VVF90=,tag:Ln4beJ8U7kXRhkgr0i2qSw==,type:comment]
-    VIP: ENC[AES256_GCM,data:9MISdZi/WzJ4W6Sn6g==,iv:gqDDPqNoZJg5+H6gOzOA8QHkPTqRDt9J8oDPem8JbwQ=,tag:+8d5U1qKGyyeKN/mufT+3w==,type:str]
-    #ENC[AES256_GCM,data:BkrQGbJ0ESYcQ9/NeRSkDWvNLgLcCw+eZpiI,iv:ouRZ9VJMHr3uNnzz9q3l9aum+nEH3imU2x+E+qW2SnA=,tag:3AiSDW/6GUrNHfvH1rufGw==,type:comment]
-    #ENC[AES256_GCM,data:X47V+rM+mgFyk4j6OhI4tgzHaAz24ipJ+bnKTYZT2sZ8rmh8+feja/Grqgz07ObJYhSYPejYwTV+r8CENZDGAWDVimrGuuI9eLqKjixNfkYwcN06zHtCIbs=,iv:ZEhKGfgwyrjegtPdj4KCYwYsMb0iIKvNmzTBjcje73k=,tag:46j3+ecQCrTP3UMFauKUVg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:cTLOJvfxO0fyAii8PRI=,iv:0qoY7ZZ5zIi67pGWPCoGt33nFqp7pA3yXXAWMFs9zE8=,tag:tj/xxsZ5+rdEqeGskxU7JQ==,type:str]
-    #ENC[AES256_GCM,data:z1KCmpU7IEZZZcfnZs/B1d66WqzbSIki1/iJNIe5VZcc6g==,iv:PVJNJzEOiBAgbH3zQswbGXeVJHvqrxPx9gGZ3exZvGs=,tag:eL+IdI+x+RRIIx+fYb5PRQ==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:6IHPb3fTqRiUm+n/8g==,iv:yM/XQ2E2l01VLc6GXscuqz9EaipjZXveBL/1sm+K0K8=,tag:nOGvxlV/IQEEvuLjk6NemA==,type:str]
-    #ENC[AES256_GCM,data:7wIxWhroqcT03psV3BwfVVzrIzxg2jtF13cYMtGJZwwh2xDcNM9WLSnuvCzXHLw=,iv:RY79MidKj3dVSO8S0Ma96OlmkMxBPBfSvOoFH+J6bqo=,tag:Ws8cYn9Mj+IWENDDPTab9w==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:WD8wAbRwzMI+4kgNc9u+Eiy59zvZ5AG9Gk8q7QvOWg==,iv:lz5DnuprMkDU/2XEa5G42im+XnhN9OJXRKWHOwVpXVs=,tag:/l6wjZl0Lnr00K9CCRyTHA==,type:str]
-    #ENC[AES256_GCM,data:yUPoqv1GWSjf/3sWOI0ozTJxrBvvp3/qSzTiH69fFow1Y/E3MjcycKLyhO3XlUfIEKskBda/RFHOx+y5gWv2495tXGqta7pcCLjECHyrCuwrKA==,iv:ECjEDxdx8D50RJD+9nyLKoOiWtMFmvaP2MvINh48e9c=,tag:SiAIVFX0aho/FgXtFdHaVA==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:aLa5gUi9AovvS9cW63Yo,iv:SWIhXjg4g3Hw1bWFwZUHSiTrq5rYiigPAOo9hVUhtXM=,tag:60pF2hgICFbWgr685GX6gQ==,type:str]
-    #ENC[AES256_GCM,data:z6wq3/VGL0vdaMxKuYx91TfYzkG1Eg6kMfOH8lRwWp1M,iv:XsoFKYcvfC5/GAYZN5Pl6Ubl6Us5tHQGXg6a1/XcyO0=,tag:F8SUruma2iUun94Yt3YrOg==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:uj5QcBYg6ciBfQbSaID+,iv:Nltgdc4WXfCZmUjvvhDCTPqgYmrMdLHwdxFAjP8w9Gs=,tag:DsjRiJdIB0dqFuP7U/ds7Q==,type:str]
-    #ENC[AES256_GCM,data:uhhfrcI/Vqgf5gWgDwrqFGJ6Ex0WBnGXpIncpoqgC57dKZ2cJ1TVTX3jsoKS+QtLi3kBVZGPbg4Q+ppNYa+LowielC8AWRPS1ltFrX3jmA0=,iv:I9EM/uav5ayqOAGTV8nvhwu1eqXIEMN8sV65Y18VraA=,tag:maI7sRLT406epgBh1UM+MQ==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:OI6JJUi7sFtm0MbC8CMT,iv:XgYonWH0hD2j+OzXwhprEcGsFcpV78bLBW0I9e9mnFk=,tag:utQpS4pNDQvh//79FpTGBA==,type:str]
-    #ENC[AES256_GCM,data:fiQZDNOmICKSb9WhDf7qj3SIIZru7FqGT3ZpMQ8jrtaz9ZH1FBuQY+7JGg0TQoe3KaJ2ty14SUjp7EvAbg24/36WmAeJM+/9Sazxb1HWWZF8La6//+xn,iv:YBE6kmMIsnI8Byi5yMC0h9NfoK9aeurBXHBakv76OVM=,tag:D1pnlrDqMHHANV1zjv7EqQ==,type:comment]
-    #ENC[AES256_GCM,data:Y1hMRUVDOFWd3reii1vc4l1poWDraIbcEwLup6hQz1+hgXf1sk0qxT6jk8X3KbJhNaeXctdosT/soo37iVH2huksCUlJfjfYKVDoLHAyJoIqUUIZKcZoyAiFxPMPYcpJwEBjKpqUDyc1n+kwFyA8NKw2zpLxQZBOu60IIQ==,iv:5EoIc7cgt+qTW3Ttc0QyL1PURJUQqlFmTUjeOwfFKZE=,tag:FIPpFBVAgKM0EOZB59NMag==,type:comment]
-    #ENC[AES256_GCM,data:314oeUGjUm0xEA5DiSCWuPmjnznGdMivGAZM4rJ5UsRXl27rk5Iz6UyVjnEER65Ap1b+73nSbJc50ZiPKDHnDlz7ffB1utOsVmPmYevdqsI=,iv:o1MHniuVequIVpNnqWtvK08a17KXaURDEC4pb7steW0=,tag:kLRZkMhmkhZTrq3rhIkQkA==,type:comment]
-    #ENC[AES256_GCM,data:La211NixY5jacPdk7QulA3/C/yR6yOJQdhwMHUBPS6O6aS2nEzNJC9e/kEkVjIU0JNQX8p2C,iv:yOkhhVh3Qcq0it7pTqrJt6xqBwFZqemikFVIWH7bFMU=,tag:avaSbnR1fUAxG2cmJ8nL5A==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:jj2S+8If+Sbi0H/0,iv:YZqngE/3IwWBIujvTU3RD/po1aOg67xn53xdjxzZ9LM=,tag:k39l0YUfHhuBJOXfnjGmUQ==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:A2R08pstarIvHAnO+PNJ6dc=,iv:Qal+LomB558yjMubb4DKQrAa0ijIlJ9DxGb83KH/iSo=,tag:bPyfIJ8i9khwTsDZnBJVHA==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:k9792w2vp1irOeGszeal3LOxUnGT9RxpEH8mUVy2dDY=,iv:DWv+SQ1US3e/omHxibKwl6yVd6SjT5WpAK+/5jlhQwg=,tag:NPru9cWy4kACXvyGNM1khQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Q+uSpvhsHsVeZqacLWIfb+9+REJbjZ0MXRUjCobrXBDQSD1eIPYEqw==,iv:VKqaeuNcqnmBbemDv4HhZOdHCnERWjG8OmHr2EGLRLM=,tag:9sfgqFSlLBzi/CCCJs5HTA==,type:str]
-    #ENC[AES256_GCM,data:LuaHfACqXZ+2q29NEJFN+3jTtQVHQ6w/Qy8qiwGEVAob4V/Ux+aBiI0IzlHtORezOewwx7DzCjDnYtWoZVM8Vw==,iv:u15VSIZ+/RCYXWsBDo9YCxv1PmutffzDmE2iMLkCpiQ=,tag:6aHHvPK03Po0awoV6ZjS/Q==,type:comment]
-    #ENC[AES256_GCM,data:buVurI4OdkQDw+smW4F/kulDUenOwMT7QPxB1cnBeEQn3x6u0xof1GZ86a6wgxa7lug1NhjdsMc=,iv:EYH01JATxdZXycy+qnzO8oTq2JZnWLVBmq83y/hIsUw=,tag:73+J7nsWxparR+wPiyuTPA==,type:comment]
-    #ENC[AES256_GCM,data:4LcF/4u0VWj6cidlWa4JltbJAQ+zXlzHqA==,iv:G68L8+VHeMMulu/tcsOkD8BsdRPzzZE5ulFgUna4ZcE=,tag:8LTO0I6By+3yeE0I5nYDWQ==,type:comment]
-    #ENC[AES256_GCM,data:ZSXrN0zBLNm4dzP/fOnjPGtAGTkXz8WWAKnMP+6DPCBE2EBkOg5b240A55FtPlGmQXkwlxLYIOah6MRbep0w7ntlwDJZIPrURvlM06o=,iv:ToTDCIvnl//62QLq6HwJtUb0FYmpJr8WSlkDNCZiNSU=,tag:awUNLPBKTKsTCHxDFFGAMA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:ax+lDd0mStuCiFRd/VcFs5+KH4t9mb3K4QbzhqU2CQ7tsD2SGH3A2vZog9U6fU2v,iv:Zz15MAf9v86mahg6Xd5ENxEZgwxwxQwlSoedMxElF54=,tag:ipKLfLWs8Gllem8F92D7lg==,type:str]
-    #ENC[AES256_GCM,data:E8AatFZDgZ09K/g6AF8wye2YFNxDOyz4tnVPLkTja7fWjoJJMGhSMBNeZJScqJnigKc07x1SV+WJZtp0xWXIZP+XvJNGPLU=,iv:cn+szTA1aXRoIpjuNhum3wveHQEtZn55adIYgqrngu4=,tag:8Wlq3nffv9wPbLSZUA145w==,type:comment]
-    #ENC[AES256_GCM,data:9833Ld95IiVW6uWjq1b08bxhWvDC6KTB3BsMDiiM16Pz9yBO7LHDAzU7b2Awb6xc3yTEnB8u,iv:7j6UJpZSKbfZ/7gbNa/4SDU2JnFx7MQWa13W963uMS0=,tag:AW1iWlB44kEknqy6QELiqg==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:ju20wWkpMw==,iv:MWfonPud5eTxzJOhTKthSO6CyhzxoW3PhmBkYVOU8Xc=,tag:TJ3tG70HxS78vUsBYWLeSQ==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:vphXv/8DZxKUMQesDy8B8piPjYg=,iv:vHMyQgjcWWKlSfmSTDu9pERYBQo07LeSSZS0vhNe8b4=,tag:3piZZ34H2TjU6VK6QfsjzA==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:sEjV/50kBpsXNcw=,iv:1mKeG/jzAAdZelpShJjRUGZF5FPvlct0jdHU7usDQr8=,tag:O5bITt6Dn0+3lqZ1p2sVFw==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:X5CCYuVs0tZFhYfEu0lM,iv:cPPz/ktRqFYR7UcA/J3LuRS82xedhozHtqVg7X17R2Q=,tag:DadVAcvCoP/bdWyJZlyyVw==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:GOU9/d7EM2WxCrFkakNDggU0QcFI/dPzZQ==,iv:jle/mIauDXQFrF3ttlzXw5DUMofDgvAJCFjOxmD3rSg=,tag:2wLD0DE9zj1zs5VPvH5D0A==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:2CdN12ge7HJW06bBhnIv8JhInsm8wkeyMbuoD0ZBDQ==,iv:yMMSba+Yuas8tr1Ld7Z681muNptNjHnFPf/e0mM+IkE=,tag:UOxlbkqRB/XFwuvYImUVqg==,type:str]
-    #ENC[AES256_GCM,data:vXk9SxxKxYI7fABJ/Lmml6XeQMMjIUoARfHsNIQq1e7zwnR0V4o=,iv:tCfv/CjfSlgkS2IQbDZqACpM3WcP+nkFFuRn3uVuNDE=,tag:CmspmzpaBSfefxKjHn+mxA==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:Ls31nGipEwYc+hResRDBkDeywyQ=,iv:k77x5v8mfuDO0RhrYOd6N1+uRlejUM6JcXHFXPUnWEk=,tag:LB12TRj8n2mkibuap7tUgg==,type:str]
-    #ENC[AES256_GCM,data:zbELTwHbWX6FZFYYRVg=,iv:ETKrbNToxli5L5iD9s8XAVQqyeySpg6B1D7dfhST3cw=,tag:ZsT06j8nHWzBn9eXcOJSmQ==,type:comment]
-    PODNET: ENC[AES256_GCM,data:UoxUGL/jeOCfZogRBg==,iv:6O+tKjTR3ekNw+ZQ3VQWb7J/EGw2pGnh0M5/Zn/b3J8=,tag:ENddrwDUwZceqTvO2QgXOg==,type:str]
-    SVCNET: ENC[AES256_GCM,data:WrvAXf3/8PBiX2thLw==,iv:dobubUwvO+gD5IlXrH97Vr0+6jm171wtv5B8Lwk7IFo=,tag:vE/UvH+wbEaBqVceuwLmEg==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:VJbSWA==,iv:qjKSJoxC9XaNac4LueIInbi0xL8++sM+izJj0NPaOhw=,tag:fB9HYWVD5qyZVkxre3zczQ==,type:str]
+    #ENC[AES256_GCM,data:g3NyM1fq/NCzaaks3lBZW11QlhgTsVwuoxb58WpWq6+Hgy1YTLsVh18Rnu+nc3GEXhiKi9Hi6YcJcRfEXlK70W8=,iv:+vbGv9gnD/ZzKpuBPQIVYCic1YEU1DJr9be5WcpBUaI=,tag:7ZGROZS38kHuCICnAd0i3g==,type:comment]
+    #ENC[AES256_GCM,data:WRyixT2MrrQY3qlsCDruDu6WPfBRKrDva9ohyh4S7ZVH3hKqkamoc3YUfBM=,iv:r1xdL+ra0VvcT2Q/XeMstltz0Rng8yTyH3a99mxRLzw=,tag:gr1+qTz08bcpULCbsuoppA==,type:comment]
+    VIP: ENC[AES256_GCM,data:qxRuqmSIFNGPeTergA==,iv:sxy/dV3sLjg7Y58mQ0n8jLm5jg4VQQ9Cz8+551b5hCY=,tag:xfiglF/Y0YN8XicSvYWjMQ==,type:str]
+    #ENC[AES256_GCM,data:jURjCTcdFXgfHILvukNF9BJp8iPhfcwut6BN,iv:SJNr7+I/sjCaC3DZCheyzyDIz+TMAEFJipe+Qkco1u8=,tag:rNBae6BfNGfl3pA/F0ywug==,type:comment]
+    #ENC[AES256_GCM,data:f/D1YNdn7aokte9Ad+X8S6z9NQtunvg9+lWLfR5qV3hICzj0LJpYusJdXeDAxFrS3MX0tnhheQ0xTPeki7Rd6wGzZFUGGx4dWbXSoiVBLR2hy4vccFZ9DnQ=,iv:6v07hMUAHXicQPdOJL7puF1u3mnBXxfHY9DaEzebG4s=,tag:Hu1i36yNBYfvP8SnucvHCA==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:7naPpgNw2MrXHeuEBfw=,iv:QWBELM0F23HoC8mBBEnrPABLA4gLtpE8NSE1kEfb/cA=,tag:CMem6Q70XSRvUwBN7xe3sA==,type:str]
+    #ENC[AES256_GCM,data:p7fVdpOC1ZdZDj6B7W45nkORQ6cR4AKqdHpt8JhlD47cTw==,iv:b9ZWvJMoYEYgOu+AOstNWqUTyAxCSAJiv6+5ZpnDzIU=,tag:RwwH+9L2qXLauHU6LH8ILA==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:BHEOb9FugINgSSVNMg==,iv:DzYXpJMN1j/FP3a957PykWSrvo6B2t+jzRYgV6XtT30=,tag:Ts3GtFnqNM4MA+mM/lCbWQ==,type:str]
+    #ENC[AES256_GCM,data:Bu8HbpVZOnvfrzyk32H3Iy5fnCAcFseXoW2ph8G3w3AvgWYVSf08TZiOV+X1dXY=,iv:vl49TXBQIospufEsPPfXbMSzaIQpLWmyYLdzhjUnGiI=,tag:yaIus1Buxp4AJLRQZwmNXQ==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:EIp+LsTwo6od3GB44qQf9kWITygImXcYlCJAy7M33g==,iv:nurLsN9C5ir5nELOKhMtDnmsuNVuIdyWGK89Sv0cPpU=,tag:hB7Ke81g946kdRVrfIJauQ==,type:str]
+    #ENC[AES256_GCM,data:+R/MFOpP7SYJKpbwd3s91r1/PbvP+ky/7HWmMWUy/Z34QmB5btyLAEtWmk/VuvM+PhmghUG7aMF3lJuRvGJd/fNcQCWYilq+gf32okyddYlKRA==,iv:e6/RJseGG/Ngy4+5fSbFZ+r3IMLbnbZvHGYb+kVQDl4=,tag:v4xyjt2KBVM06rDlUjvYxw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:38RYjIBRNdMQo79tW9db,iv:MdslEaRBb5qEO4MPFc1WItk81+P2qvsqoH2ywEyfiLs=,tag:ezCSF2HNM7A5QkSD0UbULg==,type:str]
+    #ENC[AES256_GCM,data:JJeZfMDiWCmgrbJb5nIwgq6tRp7HJidb6uPxaqH1ybhN,iv:2lmxBJiQVSgeU/TkZHUOEOHP8r2gB5dA7JvNeMDX6E4=,tag:2FE/1NpTwudNe79qGllU2g==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:UrG99eRNJIk9fF8lVUX/,iv:rU9KhoTci/HI9anjLgs9xin0HzHgZfIe4PA13JLOxbQ=,tag:+TaMwFI7wzy2qUyA8/RkfQ==,type:str]
+    #ENC[AES256_GCM,data:QddTkJhUtydC6eqjY9oJTDxOzc3dG1KWDvNdH5KWqczMYPkbR8VpSDoTK78rY+MbCeRARRxIvipVY+E/8+XsKzyV8rSgOQNAK0GZomj8mxU=,iv:4BX3knNCVmeIlhDr/CLmK0fiGzSDoICTipyxb2xRxGw=,tag:WC5vFAW6pPNJcnsIW18iCQ==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:5AzMuNaCDCqb6WEhPbXB,iv:9vY7zUYpjaF+B8tF703iHi1u/0ORcZd69CnKTnnovV4=,tag:U26lMFTGo5hJ9YFQMFGsZA==,type:str]
+    #ENC[AES256_GCM,data:K+BCM63kpXUnN/5zYwao0kOnt+sJS9npcFOqCzmzDIQ1W6pwOyFReqfzcwu8L80NZ9mN0RuatBjE789ddFih+sSIlDacsNEvrn7SLn2C2gCY92EGMxzE,iv:MkDfzoN3cLmwKza+D0lvgydp1lXa1XBMkl8WdVt4abs=,tag:kujFDnhGv7ZCePRQmNOqRw==,type:comment]
+    #ENC[AES256_GCM,data:SF0eyaC1iqRgDciPpuFaCSsdbp5eXgFtbZeV5mBi3/+PgugPctae/haYbbu4tPqnxncHgll1m55umiiJftKAhLho4K5PmGp5MR6zLYLpYgKV3M8pBmt0DpDM9bGv1enC1MAngJ8MEuJuIJxHVlxOMta5y/IVokcHxyfPaQ==,iv:UBz1jAX1YpF35BLkRiqgYOLNpsU1zGh6d+Guy1uupl8=,tag:RDaPBCy9JWJ/2A2fUrHmbA==,type:comment]
+    #ENC[AES256_GCM,data:FpCllnC3fZ4xBK431f48hfOy90hU339/VEhdc2+Koj/xse+wyDKf4WSYdbi9P1n4pueXYI1pPQB5IYd21LT0vPnp+TvwzoMejWMU6IFYdg0=,iv:hu3O/8jBSkMtPmj4EVoeV0SIArq5Z4PfELQDiEIS+nk=,tag:4qLVdXl+k48NkdtocOYHQw==,type:comment]
+    #ENC[AES256_GCM,data:LCbsxNyzGRvMRrPVg2kOI6Uv9NtN/45RXy7B+MDRi75jku3ThAZtRkermEsJY3hJcM6oqHEV,iv:T0ak/QFIqcLPJLR3iQqp740EWV2gMVJTBRJ03cnakl0=,tag:tPyjP7qjecyfYVRoXHscXQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:bfVYc31J79hEwJvP,iv:eHS/I7u+7ILKoc1DlutExMH0YSz6ZDJ5rwdnh/M86NM=,tag:qK71B6FtNguUsT5hefwFUw==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:BqlVwA8MdMU2Eq0KPUmTf0Q=,iv:rRplIrWudEmIyHENtVSPSu+EYIen4Ae6vFP2FABWnDE=,tag:Ir7QgPYk9OJZfZ1B0ECIcQ==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:iTNUNHegtqMPTGkUdqatXw0uuuP49l6hNa6vlqQBR4g=,iv:W4qGfar74k3Vl3hLZ3C3Qc+F4a2xJcgWJ/WRjonnnXE=,tag:J2T0EAjpdAtbVLfZxwCijw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:0Hn8uIQkTymNdN7mNGfW9mmUeWRmq8ryRM6vteHTmBuW1r17Q0+2wQ==,iv:/mWq6KVoirdyRiJpMPS4zTWMYprIPeD7AbtHZxRcVuQ=,tag:2q8xrczv0nypl893vcDt+g==,type:str]
+    #ENC[AES256_GCM,data:Tjmvlz41emd6N/y5uHv5Uk7Tg+w09y873UeKk/x6r6cMD+DuHA/ibVmUEgVOBgPho7hwKSpoKy6nz4i6pPZK+w==,iv:EodwULSjwslWsJJ3YaD2URohKx39FKs1KC9JkcNCLFA=,tag:dWTKlMLXCbxZhFJItUxdiw==,type:comment]
+    #ENC[AES256_GCM,data:jgzs4hcDgtuWqo1LamIjuAV2P2muUSE4uqVscGeJAPaXcoFkvDK4Sz9VjhEv4xAvxFuX3xbotpk=,iv:oTBv5atLixr1qAJaDEW7tfh++5/r9TPN1KDFjrBCujU=,tag:DYWpg0c7Nyn1eQd2w6S9zg==,type:comment]
+    #ENC[AES256_GCM,data:T0KI/abDk9PiLCf4J/00E2je6CfAXaqXOA==,iv:X0I/j2zG9MTcG1ssYYvFcqbjCRh2/1HG34sFcK73Zqo=,tag:bho/MqeftyZITPZfbsiDAQ==,type:comment]
+    #ENC[AES256_GCM,data:1g8w8RPgPLT6epE9r27YwJMHat9iLhsnLu5cHjg+hLzaok/CjnXB+rj2nrt53Sy4iLI/H6MYkcEVtjFJYccj9NFQI/cG1cWZ+Tb+JKg=,iv:aNC8FwQcHXKeTuxGLi9t/t5xnYcvBf3AD42oOJKT0jU=,tag:1nbYnRWRrk2WVtbTrRNT8w==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:BcD1+Le8iElsbihGcBIsBUEIBG3bw7Xqxc367BjJ1DS5TLtdEJsxJTgLpW2ZXzTv,iv:qJiW67a7th5coFnn7qrdGnqrLzJdpNgKKE6BlYcqSEw=,tag:2p7ct2LSZ+T1yl7MZYhafg==,type:str]
+    #ENC[AES256_GCM,data:b5Gztnc5QW6UsOvYBBRuG1KGwni2yuktKCFmEqdo23t8Qtx4gtn4/C3E1Au3Y9qlz4GnG7WwrVcXG4rckWk45Nez1sgQTTg=,iv:wqLp25xcGBwHNXUDBIOzdWOb4VOMfciHoJOVHtDKagU=,tag:bq6FgIbQHsF34HtGyqlupQ==,type:comment]
+    #ENC[AES256_GCM,data:uYVlyOy8285Gu8co+o7YzqVu7cGC+J8e6zmoXTEPiuZpXOWkD0TkYxBErhfSn0osvD04EN7m,iv:rplewrDiO0Jt3Qm4GlHvvSWusVpnIBOtXsGzN7C92Tw=,tag:C6Ga4VE7CxY1oJEyadIOFg==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:NFc8lGqXVQ==,iv:KQJrCAJC7agtC8jieq0XUQmuyREFOBTHvGAyQVXvTHc=,tag:g1RgMhfOwluMf8PPEybhcg==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:b+LK9pl+/vUrXQ/gdzwsQGpRPbc=,iv:gQfLLRkpzR38yae5HXpFC/S3RVkyI6dgLjxrX9rYsT4=,tag:t+KmhNlj2VHuXfbjF12mtQ==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:xNtDavMs9MOL+Q8=,iv:8nNszQGRHDE+wWtSnIixrUSpNzUL+OqtBEZzppGPGaI=,tag:31yGy3lhC4EvOctvNQcRzA==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:WkgVmoxuYwRy8FvVJ07e,iv:tjxE30h6J4dn1hio2OuRczokLaVneTCZXCZJSkfI2Es=,tag:f+MWLfIAdX1nADYPNBs5qg==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:YyHvlItIjCR3skq4M1x12uatwML3lUZ8vg==,iv:cc4TcpX+WkAeikrdxwpzJLn2dFnabhlAJns0FbiephY=,tag:UhbLGtDn52Xh3a7kmxYPsA==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:LmhuB02A/rqwiuORXoS5RGNCwmDJfqOorpFniBhI1w==,iv:xwMC8N9MLBiFhWatlxgsSnNkH30uMO9513gzPTcYo5I=,tag:VKjgs9Sxq1vClWc5AFmVCg==,type:str]
+    #ENC[AES256_GCM,data:OW2Fzh6zPB4XtpKHkRPHlGNoYk3MzkFD9Bts+IiNykalrwE2VH8=,iv:mDCfwKBKu4TDf/8GLLBHxVDC3gr1sP19wVn3dCjsZQE=,tag:6d6A1ECQLlv4huxPK+sBJQ==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:4GB7Y2PGa6xS8azKdgVqA+u7h3s=,iv:A+3BOxrqFUzthX9g7jgNqBBFWH+KwYPsVg97zx6U9oo=,tag:CDOZrjHoQu+ODA5KtiQY/w==,type:str]
+    #ENC[AES256_GCM,data:bjp/0YPYbYJpAozLmpM=,iv:ol0Sauox4LgsY8ykRbAL75Egww83fkzXEJiH4biagAA=,tag:0HE7ZMNZidQqon64Eg4F7w==,type:comment]
+    PODNET: ENC[AES256_GCM,data:0rhW1Ag/MVA+E7fGNg==,iv:J+QQG/Qq5yvYF1Iyj1k7loWWYoI6HiaRgm/s7E46+xc=,tag:ACM4Uuxtp8XPI5OXzQpWJQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:cluUPfneIl7MScs70A==,iv:uvYO/bM2yNLnF7FLlL/MxI/hU3Ps2Wt/KYOtN/n6KNA=,tag:2WYU4ZbEnzDRhQPicy2gPA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:qQIRaw==,iv:1ETS0pR1P2YpTMQCG9SGh/t9VMc3jebJU6QNX03wXO8=,tag:bJXE6zwOFgDFdHv2Xw634Q==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3eXRrR1R1aC8xM3VEc0xu
-            eUtPL0JlZjFTV1pVNmk5aXlzZThVUGhxbm4wCmU1K1NKdU9HcGxNMEdBYVhING9R
-            aDk0LzFIWFRYbW52TGdPRDcyMkE1L28KLS0tIHE4UnBKc2dMWTlqL1RaaWJVemNG
-            MVd6blRFem1seFhob3pTaVJiaklLdlEKvM4VYH7byodkGZSE5wTsy0RbxFCTjHfd
-            N1+ae0CXWNqSsC5giHVjXHKVHjWzFxssmiAYYg1JWv1btPVJ/HDYFQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjV3FzcmhLeUJSOGxLSXFX
+            RUFaWnVPd2FGRHhLOWRHc1dXMVgrcUVYODFVCmRveDJjZ09zYWRtTjZKenp6TEk0
+            cmN0RjliSmF3VCt1Mk82dWZuZ3VGN2sKLS0tIFNHZGExekJBU1JCQTkzQytMZXFN
+            OVZMZEt6bnpHVEdXZmMwNlJlMXRydjgK/zFsUcGN4gXydbQTDWZgi1BygLFIxxSP
+            4WAyZ7PSfQeRyCHF2OrtE/H/ErnJe1MJvWqqLWwSg+qCkwqpEDodPA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T01:50:46Z"
-    mac: ENC[AES256_GCM,data:SFXCnqPwrqhTLz7YD+1rCuKmZ2lhIuaw3KM87YGx3AedWamdh5St6avTOLKFFpnEldvoP06UWBP2R/a0igvnMD2av9jRsWbcOkwNN3eheFkigmJue8uSmkTbTa+ZCJja5/ES9TIIMwNnMsZWeP8rYxAqvSl7mRbWNNZUAotL6j4=,iv:nQNtxYmakVXoAVSMkcXN1Z5kSPmL006vjjEyXSUJwMY=,tag:sOGd4O9Ze6GgBupj7Q0Pqw==,type:str]
+    lastmodified: "2025-01-19T01:53:25Z"
+    mac: ENC[AES256_GCM,data:2/Irx/fvHuohnCXNmbVY9dpHX8cgJbJy2RdUzLABHR+VJe8A3m69GC0EKgoYW5tqXjIo9GHSRg0j92rqcqZvw6AdpLgk1U4y43kJGvQqgdvaxexUwcsawsMZoPnJVhc99V8TJjkFrjYO+S59eRoL++K1DlfECq1aVXEAkvnw4aM=,iv:QeZla4BUq1eVY0BL8ae24eKjXzAo0WTTqC7WBt9839Q=,tag:YCsfENvJ+MACcb9UTFvh0w==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
