--- a/clusters/main/kubernetes/system/kustomization.yaml
+++ b/clusters/main/kubernetes/system/kustomization.yaml
@@ -15,4 +15,4 @@ resources:
   - traefik-crds/ks.yaml
   - volsync/ks.yaml
   #- intel-device-plugins-operator/ks.yaml
-  #- intel-gpu-plugin/ks.yaml
+  - intel-gpu-plugin/ks.yaml
